Updated how the process is started. Now the process is built so that we can redirect the error stream into the Starbound process stream. This should prevent a server lock up due to unhandled error streams.